feat: added frontend, database config, userSchema, token

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/CartItem.jsx", "src/components/Btn.jsx", "src/components/HomeMenu.jsx", "src/app/cart/page.jsx", "src/app/chickrep/page.jsx", "src/app/kfc/page.jsx", "src/app/login/page.jsx", "src/app/orderfailed/page.jsx", "src/app/ordersuccessful/page.jsx", "src/app/vendors/page.jsx", "src/app/verification/page.jsx", "src/components/Interests.jsx", "src/app/page.jsx", "src/app/layout.tsx", "src/components/NavBar.jsx", "src/app/header/page.jsx", "src/context/HomeContext.jsx"],
   "exclude": ["node_modules"]
 }
